NIFI-6752 Refactored type and value conversion logic. Added support for more types. Added more tests. Removed 'parent' from 'Recursive'. (Caused issues. The recursive nature is still there as it has a child with the same type). Updated jasn1 1.11.2 to asn1bean 1.12.0. If an asn field name is a Java reserved keyword, the field gets a trailing "_" but the getter remains normal. In JASN1Utils adjusted logic when looking for the getter. Added support for inherited types. OctetStrings are converted to Strings instead of byte arrays. Service takes care of the compilation of the ASN files. Test sources are generated and removed from source control.